Stop graphs from jumping around when reordered on Edge
Fixes #222

--- a/interactivedisplay/client/app/components/graph-list-item/graph-list-item.css
+++ b/interactivedisplay/client/app/components/graph-list-item/graph-list-item.css
@@ -6,9 +6,9 @@
     height: 100%;
     display: inline-block;
 
-    -webkit-transition: top 0.1s linear, -webkit-transform 0.5s linear, width 0.5s linear;
-    -ms-transition: top 0.1s linear, -ms-transform 0.5s linear, width 0.5s linear;
-    transition: top 0.1s linear, transform 0.5s linear, width 0.5s linear;
+    -webkit-transition: top 0.1s linear, left 0.5s linear, width 0.5s linear;
+    -ms-transition: top 0.1s linear, left 0.5s linear, width 0.5s linear;
+    transition: top 0.1s linear, left 0.5s linear, width 0.5s linear;
 }
 
 .list-item.moving {
@@ -46,10 +46,10 @@
 
     border: 1px solid black;
     box-sizing: content-box;
-    
-    -webkit-transition: top 0.1s linear, -webkit-transform 0.5s linear, width 0.5s linear;
-    -ms-transition: top 0.1s linear, -ms-transform 0.5s linear, width 0.5s linear;
-    transition: top 0.1s linear, transform 0.5s linear, width 0.5s linear;
+
+    -webkit-transition: top 0.1s linear, left 0.5s linear, width 0.5s linear;
+    -ms-transition: top 0.1s linear, left 0.5s linear, width 0.5s linear;
+    transition: top 0.1s linear, left 0.5s linear, width 0.5s linear;
 }
 
 .content.moving {
